# cscart-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  release-plz.toml
.github/workflows/: ci.yml  deploy.yml  publish.yml  release.yml  test.yml
src/: README.md  lib.rs
src/crud/: mod.rs
src/handler/: mod.rs
src/request/: mod.rs
src/service/: auth_service.rs  block_service.rs  cart_service.rs  category.rs  category_service.rs  config.rs  methods.rs  mod.rs  order_service.rs  product.rs  product_service.rs  state.rs  user_service.rs  vendor_service.rs
src/types/: address.rs  auth.rs  block.rs  call_request.rs  cart.rs  category.rs  discussion.rs  language.rs  langvar.rs  mod.rs  order.rs  page.rs  payment_method.rs  product.rs  product_feature.rs  product_option.rs  resource.rs  service.rs  settting.rs  shipment.rs  shipment_method.rs  status.rs  tax.rs  user.rs  user_group.rs  vendor.rs
src/utils/: mod.rs  serde_utils.rs  test_utils.rs
tests/: auth.rs  blocks.rs  call_request.rs  cart.rs  category.rs  discussion.rs  languages.rs  langvars.rs  order.rs  pages.rs  payment_method.rs  product.rs  product_feature.rs  product_option.rs  settings.rs  setup.rs  shipment.rs  shipping_method.rs  status.rs  tax.rs  user.rs  user_group.rs  vendor.rs
