[package]
name = "cscart-rs"
description = "An sdk for the cs-cart e-commerce platform"
license = "MIT OR Apache-2.0"
version = "0.5.3"
authors =  ["Jian Earle"]
edition = "2021"
keywords = ["sdk" , "ecommerce" , "cscart"]
repository = "https://github.com/jearle10/cscart-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.71"
base64 = "0.21.0"
dotenv = "0.15.0"
reqwest = { version = "0.11.14", features = ["json"] }
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["full"] }
uuid = { version = "1.3.0", features = ["v4"] }
